# game-dev-idle

./: Dockerfile  compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  stores.ts  types.ts  utils.ts
frontend/src/components/: AchievementSnackbar.tsx  AchievementsManager.tsx  AchievementsTab.tsx  CompanyManagementTab.tsx  CompanyNamingModal.tsx  EmployeesTab.tsx  FinancialTab.tsx  GameNamingModal.tsx  GameStateManager.tsx  GameStateSaver.tsx  MainTab.tsx  MyAppBar.tsx  MyPaper.tsx  OfflineLoader.tsx  ReleasedGamesTab.tsx  ResetConfirmationModal.tsx  ResetTab.tsx
frontend/src/contexts/: GameState.ts
frontend/src/hooks/: UseCookies.ts  UseEmail.ts  UseIsLoggedIn.ts  UseLastSave.ts  UseLocalStorage.ts  useAppDispatch.ts  useAppSelector.ts  useBugsPerSecond.ts  useFeaturesPerSecond.ts  useHypePerSecond.ts  useMoneyPerSecond.ts  useSpecializationPoints.ts  useSpentSpecializationPoints.ts
frontend/src/schemas/: OauthResponseSchema.ts  UserSchema.ts
frontend/src/slices/: accountantsSlice.ts  achievementsStateSlice.ts  bugFixerCostSlice.ts  bugFixerProductivitySlice.ts  bugFixersSlice.ts  bugsPerFeatureSlice.ts  bugsSlice.ts  clickingStrengthSlice.ts  featureDeveloperCostSlice.ts  featureDeveloperProductivitySlice.ts  featureDevelopersSlice.ts  featuresSlice.ts  gameProfitabilitySlice.ts  hypeSlice.ts  marketerCostSlice.ts  marketersSlice.ts  (+5 more)
game_dev_idle/app/: api_router.py  app.py  core.py  di.py  main.py  models.py  repositories.py  schemas.py  settings.py  unauthenticated_api_router.py
(+6 files in other folders)
